<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/activity_modify_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="@string/activity_modify_title"
        app:titleTextColor="@android:color/white">


    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/activity_modify_til_old_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/activity_modify_edt_old_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/activity_account_edt_old_password"
                    android:inputType="textPassword"
                    android:maxLength="20" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/activity_modify_til_new_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/activity_modify_edt_new_one"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/activity_account_edt_new_one"
                    android:inputType="textPassword"
                    android:maxLength="20" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/activity_modify_til_new_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/activity_modify_edt_new_two"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/activity_account_edt_new_two"
                    android:inputType="textPassword"
                    android:maxLength="20" />
            </android.support.design.widget.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/activity_modify_til_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    app:errorEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/activity_modify_edt_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/activity_account_email"
                        android:inputType="textEmailAddress"
                        android:maxLength="30" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/activity_modify_btn_get_check_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/btn_bg"
                    android:enabled="false"
                    android:text="@string/activity_account_btn_get_check_code"
                    android:textColor="@android:color/white" />

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/activity_modify_til_check_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/activity_modify_edt_check_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/activity_account_edt_check_code"
                    android:inputType="number"
                    android:maxLength="4" />
            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/activity_modify_btn_modify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_bg"
                android:enabled="false"
                android:text="@string/activity_modify_btn_modify"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>