<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/activity_account_toolbar"
        app:navigationIcon="?attr/homeAsUpIndicator"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
       app:title="@string/activity_account"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:titleTextColor="@android:color/white">


    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <android.support.design.widget.TextInputLayout
                app:errorTextAppearance="@style/ThemeErrorTextAppearance"
                android:id="@+id/activity_account_til_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/activity_account_edt_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/activity_account_name"
                    android:inputType="text"
                    android:maxLength="10" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                app:errorTextAppearance="@style/ThemeErrorTextAppearance"
                android:id="@+id/activity_account_til_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/activity_account_edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/activity_account_password"
                    android:inputType="textPassword"
                    android:maxLength="20" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                app:errorTextAppearance="@style/ThemeErrorTextAppearance"
                android:id="@+id/activity_account_til_ok_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/activity_account_edt_ok_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/activity_account_ok_password"
                    android:inputType="textPassword"
                    android:maxLength="20" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    app:errorTextAppearance="@style/ThemeErrorTextAppearance"
                    android:id="@+id/activity_account_til_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    app:errorEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/activity_account_edt_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/activity_account_email"
                        android:inputType="textEmailAddress"
                        android:maxLength="30" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/activity_account_btn_get_check_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/btn_bg"
                    android:enabled="false"
                    android:text="@string/activity_account_btn_get_check_code"
                    android:textColor="@android:color/white" />

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                app:errorTextAppearance="@style/ThemeErrorTextAppearance"
                android:id="@+id/activity_account_til_check_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/activity_account_edt_check_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/activity_account_edt_check_code"
                    android:inputType="number"
                    android:maxLength="4" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/activity_account_btn_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_bg"
                android:enabled="false"
                android:text="@string/activity_account"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
