<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar

        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:titleTextColor="@android:color/white">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/activity_login"
                android:textColor="@android:color/white"
                android:textSize="20sp" />
        </FrameLayout>


    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">


        <android.support.design.widget.TextInputLayout
            app:errorTextAppearance="@style/ThemeErrorTextAppearance"
            android:id="@+id/activity_login_til_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/activity_login_edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_login_email"
                android:inputType="textEmailAddress"
                android:maxLength="40" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            app:errorTextAppearance="@style/ThemeErrorTextAppearance"
            android:id="@+id/activity_login_til_password"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true">


            <android.support.design.widget.TextInputEditText
                android:id="@+id/activity_login_edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_login_edt_password"
                android:inputType="textPassword"
                android:maxLength="20" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:enabled="false"
            android:id="@+id/activity_login_btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bg"
            android:text="@string/activity_login"
            android:textColor="@android:color/white" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/activity_login_tv_find_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/activity_login_tv_find_password"
                android:textColor="@color/colorPrimary"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/activity_login_tv_add_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/activity_login_tv_add_account"
                android:textColor="@color/colorPrimary"
                tools:ignore="RtlHardcoded" />
        </FrameLayout>
    </LinearLayout>
</LinearLayout>