<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="40dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/fragment_document_ll"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_sort" />

            <TextView
                android:id="@+id/fragment_document_tv_sort_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/fragment_all_file_sort_title" />
        </LinearLayout>


        <TextView
            android:id="@+id/fragment_document_tv_num"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#a9a9a9" />
    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/fragment_document_srl"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ListView
                android:id="@+id/fragment_document_lv"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <FrameLayout
                android:id="@+id/fragment_document_frameLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    tools:ignore="UselessParent">

                    <TextView
                        android:id="@+id/fragment_document_tv_hint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/app_name" />

                    <Button
                        android:id="@+id/fragment_document_btn_refresh"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/btn_bg_activate"
                        android:text="@string/fragment_btn_refresh"

                        android:textColor="@android:color/white" />
                </LinearLayout>
            </FrameLayout>

            <include layout="@layout/include_select_item" />

        </RelativeLayout>
    </android.support.v4.widget.SwipeRefreshLayout>

</LinearLayout>